names + tutorial + coin + various other things

--- a/public/random/change_god_statues.html
+++ b/public/random/change_god_statues.html
@@ -165,7 +165,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Mirabelle</span>
+            <span class="dialogue-name">ミラベル</span>
             <span class="dialogue-expression">(excited1)</span>
         </span>
         Siffrin? Are you curious about the Change God's statues, perhaps...?
@@ -176,21 +176,21 @@
     <ul>
         <li><b>First time:</b>
             <span class="dialogue-head">
-                <span class="dialogue-name">Siffrin</span>
+                <span class="dialogue-name">シフラン</span>
                 <span class="dialogue-expression">(awkward1)</span>
             </span>
             (Oh, um...)
         </li>
         <li><b>ACT 2 & 3:</b>
             <span class="dialogue-head">
-                <span class="dialogue-name">Siffrin</span>
+                <span class="dialogue-name">シフラン</span>
                 <span class="dialogue-expression">(questions1)</span>
             </span>
             (...)
         </li>
         <li><b>ACT 4:</b>
             <span class="dialogue-head">
-                <span class="dialogue-name">Siffrin</span>
+                <span class="dialogue-name">シフラン</span>
                 <span class="dialogue-expression">(fake1)</span>
             </span>
             (...)
@@ -206,7 +206,7 @@
 
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">Odile</span>
+                            <span class="dialogue-name">オディール</span>
                             <span class="dialogue-expression">(huh2)</span>
                         </span>
                         That's the King's doing, isn't it?
@@ -214,7 +214,7 @@
 
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">Isabeau</span>
+                            <span class="dialogue-name">イザボー</span>
                             <span class="dialogue-expression">(wonder2)</span>
                         </span>
                         They're statues of the Change God, and the King wants to freeze Vaugarde in time, so... Maybe the King wanted to make a statement.
@@ -222,7 +222,7 @@
 
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">Isabeau</span>
+                            <span class="dialogue-name">イザボー</span>
                             <span class="dialogue-expression">(boo1)</span>
                         </span>
                         "Look how useless your god is!!!" That sorta thing.
@@ -230,7 +230,7 @@
 
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">Odile</span>
+                            <span class="dialogue-name">オディール</span>
                             <span class="dialogue-expression">(dotdotdot2)</span>
                         </span>
                         But only the faces are destroyed... Normally, you'd destroy the whole statue, right?
@@ -238,7 +238,7 @@
 
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">Bonnie</span>
+                            <span class="dialogue-name">ボニー</span>
                             <span class="dialogue-expression">(serious1)</span>
                         </span>
                         The face is important, Dile.
@@ -246,7 +246,7 @@
 
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">Odile</span>
+                            <span class="dialogue-name">オディール</span>
                             <span class="dialogue-expression">(hm2)</span>
                         </span>
                         Oh?
@@ -254,7 +254,7 @@
 
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">Mirabelle</span>
+                            <span class="dialogue-name">ミラベル</span>
                             <span class="dialogue-expression">(anxious2)</span>
                         </span>
                         Yes! Um, so, every statue we've seen so far is made by a different Crafter, or artist!
@@ -262,7 +262,7 @@
 
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">Isabeau</span>
+                            <span class="dialogue-name">イザボー</span>
                             <span class="dialogue-expression">(brag1)</span>
                         </span>
                         It's kind of a cultural thing to Craft your own Change God.
@@ -270,7 +270,7 @@
 
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">Isabeau</span>
+                            <span class="dialogue-name">イザボー</span>
                             <span class="dialogue-expression">(neutral1)</span>
                         </span>
                         The Change God is always changing, always different... And we all have our own version of the Change God in our brains!
@@ -278,7 +278,7 @@
 
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">Mirabelle</span>
+                            <span class="dialogue-name">ミラベル</span>
                             <span class="dialogue-expression">(anxious1)</span>
                         </span>
                         The Change God is always depicted wearing the same clothes, so they're at least recognizable in that way...
@@ -286,7 +286,7 @@
 
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">Mirabelle</span>
+                            <span class="dialogue-name">ミラベル</span>
                             <span class="dialogue-expression">(excited1)</span>
                         </span>
                         But their face is always changing!
@@ -294,7 +294,7 @@
 
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">Bonnie</span>
+                            <span class="dialogue-name">ボニー</span>
                             <span class="dialogue-expression">(yeah!2)</span>
                         </span>
                         I think the Change God has like a thousand eyes!!! That's how they can see everything!
@@ -302,7 +302,7 @@
 
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">Mirabelle</span>
+                            <span class="dialogue-name">ミラベル</span>
                             <span class="dialogue-expression">(stressed2)</span>
                         </span>
                         I've heard someone say the Change God had sewn their own mouth shut... Unable to tell us how to change, and leaving it to us poor humans to figure it out!
@@ -310,7 +310,7 @@
 
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">Isabeau</span>
+                            <span class="dialogue-name">イザボー</span>
                             <span class="dialogue-expression">(hahaha1)</span>
                         </span>
                         I had a dream they had dimples!
@@ -318,7 +318,7 @@
 
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">Mirabelle</span>
+                            <span class="dialogue-name">ミラベル</span>
                             <span class="dialogue-expression">(happy1)</span>
                         </span>
                         And, and! Since it's Crafted by us, it's supposed to represent our connection to the Change God!
@@ -326,7 +326,7 @@
 
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">Mirabelle</span>
+                            <span class="dialogue-name">ミラベル</span>
                             <span class="dialogue-expression">(happy1)</span>
                         </span>
                         The Change God, by their very nature, doesn't interact with humans much...
@@ -334,7 +334,7 @@
 
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">Bonnie</span>
+                            <span class="dialogue-name">ボニー</span>
                             <span class="dialogue-expression">(and then1)</span>
                         </span>
                         Except for when they blessed Mirabelle!
@@ -342,7 +342,7 @@
 
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">Mirabelle</span>
+                            <span class="dialogue-name">ミラベル</span>
                             <span class="dialogue-expression">(anxious2)</span>
                         </span>
                         Ah... Y-Yes...
@@ -350,7 +350,7 @@
 
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">Mirabelle</span>
+                            <span class="dialogue-name">ミラベル</span>
                             <span class="dialogue-expression">(awawa1)</span>
                         </span>
                         B-But by Crafting the Change God's face, we get linked to them in some small way!
@@ -358,7 +358,7 @@
 
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">Mirabelle</span>
+                            <span class="dialogue-name">ミラベル</span>
                             <span class="dialogue-expression">(happy1)</span>
                         </span>
                         And some people even get to communicate with the Change God through the statues they made, as well!
@@ -366,7 +366,7 @@
 
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">Odile</span>
+                            <span class="dialogue-name">オディール</span>
                             <span class="dialogue-expression">(huh3)</span>
                         </span>
                         Oh, really?
@@ -374,7 +374,7 @@
 
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">Isabeau</span>
+                            <span class="dialogue-name">イザボー</span>
                             <span class="dialogue-expression">(really1)</span>
                         </span>
                         Nah, not really.
@@ -382,7 +382,7 @@
 
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">Mirabelle</span>
+                            <span class="dialogue-name">ミラベル</span>
                             <span class="dialogue-expression">(angy1)</span>
                         </span>
                         Yes, really!!! I've met someone who's talked to the Change God, when they finished their statue!!!
@@ -390,7 +390,7 @@
 
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">Isabeau</span>
+                            <span class="dialogue-name">イザボー</span>
                             <span class="dialogue-expression">(really3)</span>
                         </span>
                         Was it in a dream, maybe? Because you know that doesn't count.
@@ -398,7 +398,7 @@
 
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">Mirabelle</span>
+                            <span class="dialogue-name">ミラベル</span>
                             <span class="dialogue-expression">(happy1)</span>
                         </span>
                         A-Anyway, that's why all the statues are different from one another!
@@ -406,7 +406,7 @@
 
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">Odile</span>
+                            <span class="dialogue-name">オディール</span>
                             <span class="dialogue-expression">(lol1)</span>
                         </span>
                         Interesting... So it's a cultural tradition to make your own statue.
@@ -414,7 +414,7 @@
 
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">Odile</span>
+                            <span class="dialogue-name">オディール</span>
                             <span class="dialogue-expression">(gimme1)</span>
                         </span>
                         And it's a connection between you and the Change God...
@@ -422,7 +422,7 @@
 
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">Isabeau</span>
+                            <span class="dialogue-name">イザボー</span>
                             <span class="dialogue-expression">(neutral1)</span>
                         </span>
                         How do you connect with your gods, m'dame?
@@ -430,7 +430,7 @@
 
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">Odile</span>
+                            <span class="dialogue-name">オディール</span>
                             <span class="dialogue-expression">(wonder1)</span>
                         </span>
                         We make shrines for our gods, and everyone shares the shrines.
@@ -438,7 +438,7 @@
 
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">Isabeau</span>
+                            <span class="dialogue-name">イザボー</span>
                             <span class="dialogue-expression">(huhwah1)</span>
                         </span>
                         SHARING GODS............
@@ -475,7 +475,7 @@
 
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">Mirabelle</span>
+                            <span class="dialogue-name">ミラベル</span>
                             <span class="dialogue-expression">(anxious1)</span>
                         </span>
                         Ah... Okay...
@@ -483,7 +483,7 @@
 
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">Mirabelle</span>
+                            <span class="dialogue-name">ミラベル</span>
                             <span class="dialogue-expression">(stressed1)</span>
                         </span>
                         W-Well, let me know if you ever want to know more about them, okay?!?
