--- a/public/random/generic.html
+++ b/public/random/generic.html
@@ -280,7 +280,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Isabeau</span>
+            <span class="dialogue-name">イザボー</span>
             <span class="dialogue-expression">(neutral1)</span>
         </span>
         Have you never seen a lock like this before, Sif?
@@ -288,7 +288,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Isabeau</span>
+            <span class="dialogue-name">イザボー</span>
             <span class="dialogue-expression">(brag1)</span>
         </span>
         It's a special kind of Vaugardian lock! Instead of a key, it needs specific words to open!
@@ -296,7 +296,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Odile</span>
+            <span class="dialogue-name">オディール</span>
             <span class="dialogue-expression">(doubt1)</span>
         </span>
         Words...?
@@ -304,7 +304,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Mirabelle</span>
+            <span class="dialogue-name">ミラベル</span>
             <span class="dialogue-expression">(happy1)</span>
         </span>
         Yes, you just need to say the words aloud!
@@ -312,7 +312,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Mirabelle</span>
+            <span class="dialogue-name">ミラベル</span>
             <span class="dialogue-expression">(awkward2)</span>
         </span>
         I think they call it a, uh... An openphrase?
@@ -320,7 +320,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Odile</span>
+            <span class="dialogue-name">オディール</span>
             <span class="dialogue-expression">(lol4)</span>
         </span>
         An openphrase... Fascinating.
@@ -328,7 +328,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Odile</span>
+            <span class="dialogue-name">オディール</span>
             <span class="dialogue-expression">(huh1)</span>
         </span>
         So what is the phrase for this lock?
@@ -336,7 +336,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Mirabelle</span>
+            <span class="dialogue-name">ミラベル</span>
             <span class="dialogue-expression">(happy1)</span>
         </span>
         I...
@@ -344,7 +344,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Mirabelle</span>
+            <span class="dialogue-name">ミラベル</span>
             <span class="dialogue-expression">(anxious1)</span>
         </span>
         Do not know.
@@ -352,7 +352,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Odile</span>
+            <span class="dialogue-name">オディール</span>
             <span class="dialogue-expression">(urgh1)</span>
         </span>
         Ah.
@@ -360,7 +360,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Odile</span>
+            <span class="dialogue-name">オディール</span>
             <span class="dialogue-expression">(hm2)</span>
         </span>
         So it's locked?
@@ -368,7 +368,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Mirabelle</span>
+            <span class="dialogue-name">ミラベル</span>
             <span class="dialogue-expression">(awkward1)</span>
         </span>
         Yes.
@@ -376,7 +376,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Odile</span>
+            <span class="dialogue-name">オディール</span>
             <span class="dialogue-expression">(huh1)</span>
         </span>
         Yahoo.
@@ -695,7 +695,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Odile</span>
+            <span class="dialogue-name">オディール</span>
             <span class="dialogue-expression">(dotdotdot2)</span>
         </span>
         ...
@@ -703,7 +703,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Odile</span>
+            <span class="dialogue-name">オディール</span>
             <span class="dialogue-expression">(dotdotdot2)</span>
         </span>
         Something's weird.
@@ -711,7 +711,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Mirabelle</span>
+            <span class="dialogue-name">ミラベル</span>
             <span class="dialogue-expression">(anxious1)</span>
         </span>
         Huh? Something's weird? Like what?
@@ -721,7 +721,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Odile</span>
+            <span class="dialogue-name">オディール</span>
             <span class="dialogue-expression">(dotdotdot2)</span>
         </span>
         ...I'll let you know when I find out.
