--- a/public/rooms/dormont/center.html
+++ b/public/rooms/dormont/center.html
@@ -341,21 +341,21 @@
     <ul>
         <li><b>ACT 1 & 2: </b> 
             <span class="dialogue-head">
-                <span class="dialogue-name">Siffrin</span>
+                <span class="dialogue-name">シフラン</span>
                 <span class="dialogue-expression">(questions2)</span>
             </span>
             (...)
         </li>
         <li><b>ACT 3 & 4: </b>
             <span class="dialogue-head">
-                <span class="dialogue-name">Siffrin</span>
+                <span class="dialogue-name">シフラン</span>
                 <span class="dialogue-expression">(fake1)</span>
             </span>
             (...)
         </li>
         <li><b>After finding out: </b>
             <span class="dialogue-head">
-                <span class="dialogue-name">Siffrin</span>
+                <span class="dialogue-name">シフラン</span>
                 <span class="dialogue-expression">(serious1)</span>
             </span>
             (...)
@@ -475,7 +475,7 @@
 
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">Siffrin</span>
+                            <span class="dialogue-name">シフラン</span>
                             <span class="dialogue-expression">(serious1)</span>
                         </span>
                         (...) "Don't you have a sister?"
@@ -609,7 +609,7 @@
 
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">Siffrin</span>
+                            <span class="dialogue-name">シフラン</span>
                             <span class="dialogue-expression">(serious1)</span>
                         </span>
                         (...) "Aren't you an only child?"
@@ -671,7 +671,7 @@
 
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">Siffrin</span>
+                            <span class="dialogue-name">シフラン</span>
                             <span class="dialogue-expression">(serious1)</span>
                         </span>
                         "Which country did your sister move to?"
@@ -708,7 +708,7 @@
 
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">Siffrin</span>
+                            <span class="dialogue-name">シフラン</span>
                             <span class="dialogue-expression">(what1)</span>
                         </span>
                         "But which country?"
@@ -846,7 +846,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Siffrin</span>
+            <span class="dialogue-name">シフラン</span>
             <span class="dialogue-expression">(okay2)</span>
         </span>
         (You have to mention it...) "We're not actually a family, you know."
@@ -885,7 +885,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Siffrin</span>
+            <span class="dialogue-name">シフラン</span>
             <span class="dialogue-expression">(sadsmile1)</span>
         </span>
         (...) "Having people you consider family is nice."
@@ -1112,13 +1112,13 @@
     <ul>
         <li><b>ACT 1 & 2: </b>
             <span class="dialogue-head">
-                <span class="dialogue-name">Siffrin</span>
+                <span class="dialogue-name">シフラン</span>
                 <span class="dialogue-expression">(questions2)</span>
             </span> (Why not.)
         </li>
         <li><b>ACT 3 & 4: </b>
             <span class="dialogue-head">
-                <span class="dialogue-name">Siffrin</span>
+                <span class="dialogue-name">シフラン</span>
                 <span class="dialogue-expression">(fake1)</span>
             </span> (...)
         </li>
@@ -1455,7 +1455,7 @@
 
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">Siffrin</span>
+                            <span class="dialogue-name">シフラン</span>
                             <span class="dialogue-expression">(siiiiigh1)</span>
                         </span>
                         (Urgh...) "That there's no fish in this river? Yeah, I noticed.
@@ -1657,7 +1657,7 @@
 
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">Siffrin</span>
+                            <span class="dialogue-name">シフラン</span>
                             <span class="dialogue-expression">(surprised2)</span>
                         </span>
                         (OH STARS) "FISH"
@@ -2246,13 +2246,13 @@
     <ul>
         <li><b>ACT 1 & 2: </b>
             <span class="dialogue-head">
-                <span class="dialogue-name">Siffrin</span>
+                <span class="dialogue-name">シフラン</span>
                 <span class="dialogue-expression">(okay1)</span>
             </span>
         </li>
         <li><b>ACT 3 & 4: </b>
             <span class="dialogue-head">
-                <span class="dialogue-name">Siffrin</span>
+                <span class="dialogue-name">シフラン</span>
                 <span class="dialogue-expression">(fake1)</span>
             </span>
         </li>
@@ -2339,20 +2339,20 @@
                     <ul>
                         <li><b>ACT 2: </b>
                             <span class="dialogue-head">
-                                <span class="dialogue-name">Siffrin</span>
+                                <span class="dialogue-name">シフラン</span>
                                 <span class="dialogue-expression">(okay2)</span>
                             </span> (Okay you need to go.)
                         </li>
                         <li><b>ACT 3: </b>
                             <span class="dialogue-head">
-                                <span class="dialogue-name">Siffrin</span> 
+                                <span class="dialogue-name">シフラン</span> 
                                 <span class="dialogue-expression">(fake2)</span>
                             </span>
                             (...)
                         </li>
                         <li><b>ACT 4: </b>
                             <span class="dialogue-head">
-                                <span class="dialogue-name">Siffrin</span>
+                                <span class="dialogue-name">シフラン</span>
                                 <span class="dialogue-expression">(fake4)</span>
                             </span> (...)
                         </li>
@@ -2428,13 +2428,13 @@
                     <ul>
                         <li><b>ACT 2: </b>
                             <span class="dialogue-head">
-                                <span class="dialogue-name">Siffrin</span>
+                                <span class="dialogue-name">シフラン</span>
                                 <span class="dialogue-expression">(sad2)</span>
                             </span>
                         </li>
                         <li><b>ACT 3 & 4: </b>
                             <span class="dialogue-head">
-                                <span class="dialogue-name">Siffrin</span>
+                                <span class="dialogue-name">シフラン</span>
                                 <span class="dialogue-expression">(hide2)</span>
                             </span>
                         </li>
@@ -2573,7 +2573,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Siffrin</span>
+            <span class="dialogue-name">シフラン</span>
             <span class="dialogue-expression">(TS_dismissive2)</span>
         </span>
         "Yes, I KNOW."
@@ -2714,13 +2714,13 @@
     <ul>
         <li><b>ACT 1 & 2: </b>
             <span class="dialogue-head">
-                <span class="dialogue-name">Siffrin</span>
+                <span class="dialogue-name">シフラン</span>
                 <span class="dialogue-expression">(smiling3)</span>
             </span>
         </li>
         <li><b>ACt 3 & 4: </b>
             <span class="dialogue-head">
-                <span class="dialogue-name">Siffrin</span>
+                <span class="dialogue-name">シフラン</span>
                 <span class="dialogue-expression">(fake1)</span>
             </span>
         </li>
@@ -2841,13 +2841,13 @@
                     <ul>
                         <li><b>ACT 2: </b>
                             <span class="dialogue-head">
-                                <span class="dialogue-name">Siffrin</span>
+                                <span class="dialogue-name">シフラン</span>
                                 <span class="dialogue-expression">(smiling2)</span>
                             </span>
                         </li>
                         <li><b>ACT 3 & 4: </b>
                             <span class="dialogue-head">
-                                <span class="dialogue-name">Siffrin</span>
+                                <span class="dialogue-name">シフラン</span>
                                 <span class="dialogue-expression">(fake1)</span>
                             </span>
                         </li>
