--- a/public/rooms/dormont/dormdile.html
+++ b/public/rooms/dormont/dormdile.html
@@ -67,7 +67,7 @@
 <div class="dialogue">
   <p class="dialogue-line">
     <span class="dialogue-head">
-      <span class="dialogue-name">Odile</span>
+      <span class="dialogue-name">オディール</span>
       <span class="dialogue-expression">(awkward1)</span>
     </span>
     What is a plantain peel doing here...?
@@ -88,7 +88,7 @@
 
   <p class="dialogue-line">
     <span class="dialogue-head">
-      <span class="dialogue-name">Odile</span>
+      <span class="dialogue-name">オディール</span>
       <span class="dialogue-expression">(hm2)</span>
     </span>
     The Change God's statue...
@@ -96,7 +96,7 @@
 
   <p class="dialogue-line">
     <span class="dialogue-head">
-      <span class="dialogue-name">Odile</span>
+      <span class="dialogue-name">オディール</span>
       <span class="dialogue-expression">(huh1)</span>
     </span>
     Quite a peculiar figure, don't you think?
@@ -118,7 +118,7 @@
 
   <p class="dialogue-line">
     <span class="dialogue-head">
-      <span class="dialogue-name">Odile</span>
+      <span class="dialogue-name">オディール</span>
       <span class="dialogue-expression">(gimme1)</span>
     </span>
     All done with... Whatever you were just doing?
@@ -146,7 +146,7 @@
 
   <p class="dialogue-line">
     <span class="dialogue-head">
-      <span class="dialogue-name">Odile</span>
+      <span class="dialogue-name">オディール</span>
       <span class="dialogue-expression">(hm1)</span>
     </span>
     Please don't make us talk to everyone in Dormont, Siffrin, PLEASE.
@@ -169,7 +169,7 @@
 
   <p class="dialogue-line">
     <span class="dialogue-head">
-      <span class="dialogue-name">Odile</span>
+      <span class="dialogue-name">オディール</span>
       <span class="dialogue-expression">(gimme1)</span>
     </span>
     I see that. Caught anything recently?
@@ -191,7 +191,7 @@
 
   <p class="dialogue-line">
     <span class="dialogue-head">
-      <span class="dialogue-name">Odile</span>
+      <span class="dialogue-name">オディール</span>
       <span class="dialogue-expression">(hm1)</span>
     </span>
     Thanks, that was very helpful.
@@ -209,7 +209,7 @@
 
   <p class="dialogue-line">
     <span class="dialogue-head">
-      <span class="dialogue-name">Mirabelle</span>
+      <span class="dialogue-name">ミラベル</span>
       <span class="dialogue-expression">(happy2)</span>
     </span>
     Oh, Siffrin, madame Odile! On a secret quest again?
@@ -217,7 +217,7 @@
 
   <p class="dialogue-line">
     <span class="dialogue-head">
-      <span class="dialogue-name">Odile</span>
+      <span class="dialogue-name">オディール</span>
       <span class="dialogue-expression">(huh1)</span>
     </span>
     "Again", huh.
@@ -225,7 +225,7 @@
 
   <p class="dialogue-line">
     <span class="dialogue-head">
-      <span class="dialogue-name">Mirabelle</span>
+      <span class="dialogue-name">ミラベル</span>
       <span class="dialogue-expression">(anxious2)</span>
     </span>
     Oh, sorry! I feel like... I've seen you two go on secret quests very often?
@@ -233,7 +233,7 @@
 
   <p class="dialogue-line">
     <span class="dialogue-head">
-      <span class="dialogue-name">Mirabelle</span>
+      <span class="dialogue-name">ミラベル</span>
       <span class="dialogue-expression">(awkward1)</span>
     </span>
     Like... Literally every time we've stayed in a town or village?
@@ -241,7 +241,7 @@
 
   <p class="dialogue-line">
     <span class="dialogue-head">
-      <span class="dialogue-name">Mirabelle</span>
+      <span class="dialogue-name">ミラベル</span>
       <span class="dialogue-expression">(happy1)</span>
     </span>
     Isabeau and I always wondered where you were going!
@@ -283,7 +283,7 @@
 
   <p class="dialogue-line">
     <span class="dialogue-head">
-      <span class="dialogue-name">Odile</span>
+      <span class="dialogue-name">オディール</span>
       <span class="dialogue-expression">(up1)</span>
     </span>
     Are you two betting on it? On what our "secret quests" are about?
@@ -291,7 +291,7 @@
 
   <p class="dialogue-line">
     <span class="dialogue-head">
-      <span class="dialogue-name">Mirabelle</span>
+      <span class="dialogue-name">ミラベル</span>
       <span class="dialogue-expression">(serious2)</span>
     </span>
     Oh, I would never bet on anything. It goes against my moral code, madame.
@@ -299,7 +299,7 @@
 
   <p class="dialogue-line">
     <span class="dialogue-head">
-      <span class="dialogue-name">Mirabelle</span>
+      <span class="dialogue-name">ミラベル</span>
       <span class="dialogue-expression">(happy1)</span>
     </span>
     But Isabeau will read a horror book of my choice if my guess is right, hehe!
@@ -307,7 +307,7 @@
 
   <p class="dialogue-line">
     <span class="dialogue-head">
-      <span class="dialogue-name">Odile</span>
+      <span class="dialogue-name">オディール</span>
       <span class="dialogue-expression">(lol3)</span>
     </span>
     . . .
@@ -315,7 +315,7 @@
 
   <p class="dialogue-line">
     <span class="dialogue-head">
-      <span class="dialogue-name">Mirabelle</span>
+      <span class="dialogue-name">ミラベル</span>
       <span class="dialogue-expression">(happy1)</span>
     </span>
     . . .
@@ -323,7 +323,7 @@
 
   <p class="dialogue-line">
     <span class="dialogue-head">
-      <span class="dialogue-name">Mirabelle</span>
+      <span class="dialogue-name">ミラベル</span>
       <span class="dialogue-expression">(anxious3)</span>
     </span>
     Oh no, you're not going to tell me what your secret quests were about now that I've said we're betting on it.
@@ -331,7 +331,7 @@
 
   <p class="dialogue-line">
     <span class="dialogue-head">
-      <span class="dialogue-name">Odile</span>
+      <span class="dialogue-name">オディール</span>
       <span class="dialogue-expression">(lol4)</span>
     </span>
     We'll see you later, Mirabelle.
@@ -339,7 +339,7 @@
 
   <p class="dialogue-line">
     <span class="dialogue-head">
-      <span class="dialogue-name">Mirabelle</span>
+      <span class="dialogue-name">ミラベル</span>
       <span class="dialogue-expression">(uwah!1)</span>
     </span>
     NO!!! NO, COME BACK!!!!!!!!!
@@ -351,7 +351,7 @@
 
   <p class="dialogue-line">
     <span class="dialogue-head">
-      <span class="dialogue-name">Mirabelle</span>
+      <span class="dialogue-name">ミラベル</span>
       <span class="dialogue-expression">(stressed1)</span>
     </span>
     Oh, Mirabelle... You almost had it...
@@ -373,7 +373,7 @@
 
   <p class="dialogue-line">
     <span class="dialogue-head">
-      <span class="dialogue-name">Odile</span>
+      <span class="dialogue-name">オディール</span>
       <span class="dialogue-expression">(urgh1)</span>
     </span>
     Urgh... Ha...
@@ -388,7 +388,7 @@
 
   <p class="dialogue-line">
     <span class="dialogue-head">
-      <span class="dialogue-name">Odile</span>
+      <span class="dialogue-name">オディール</span>
       <span class="dialogue-expression">(urgh1)</span>
     </span>
     Curse you and your legs.
@@ -403,7 +403,7 @@
 
   <p class="dialogue-line">
     <span class="dialogue-head">
-      <span class="dialogue-name">Odile</span>
+      <span class="dialogue-name">オディール</span>
       <span class="dialogue-expression">(urgh1)</span>
     </span>
     . . .
@@ -432,7 +432,7 @@
 
   <p class="dialogue-line">
     <span class="dialogue-head">
-      <span class="dialogue-name">Odile</span>
+      <span class="dialogue-name">オディール</span>
       <span class="dialogue-expression">(hm1)</span>
     </span>
     Hello, no time to talk, have a good day.
@@ -463,7 +463,7 @@
 
   <p class="dialogue-line">
     <span class="dialogue-head">
-      <span class="dialogue-name">Odile</span>
+      <span class="dialogue-name">オディール</span>
       <span class="dialogue-expression">(reading2)</span>
     </span>
     No.
@@ -488,7 +488,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Bonnie</span>
+            <span class="dialogue-name">ボニー</span>
             <span class="dialogue-expression">(happy2)</span>
         </span>
         Oh, hey Dile.
@@ -496,7 +496,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Odile</span>
+            <span class="dialogue-name">オディール</span>
             <span class="dialogue-expression">(huh1)</span>
         </span>
         Boniface.
@@ -504,7 +504,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Bonnie</span>
+            <span class="dialogue-name">ボニー</span>
             <span class="dialogue-expression">(serious1)</span>
         </span>
         Did you find some good stuff for tonight?
@@ -512,7 +512,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Odile</span>
+            <span class="dialogue-name">オディール</span>
             <span class="dialogue-expression">(reading2)</span>
         </span>
         Not much. I did find some flour, though. I know we were running low.
@@ -520,7 +520,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Bonnie</span>
+            <span class="dialogue-name">ボニー</span>
             <span class="dialogue-expression">(smile4)</span>
         </span>
         Yesssssss.
@@ -528,7 +528,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Bonnie</span>
+            <span class="dialogue-name">ボニー</span>
             <span class="dialogue-expression">(surprised1)</span>
         </span>
         Why are you with Frin? Was the flour too heavy? I could've helped!
@@ -536,7 +536,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Odile</span>
+            <span class="dialogue-name">オディール</span>
             <span class="dialogue-expression">(hm2)</span>
         </span>
         Siffrin and I have things to do.
@@ -544,7 +544,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Bonnie</span>
+            <span class="dialogue-name">ボニー</span>
             <span class="dialogue-expression">(serious1)</span>
         </span>
         Oh. Can I help? I wanna help.
@@ -552,7 +552,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Odile</span>
+            <span class="dialogue-name">オディール</span>
             <span class="dialogue-expression">(huh1)</span>
         </span>
         We're looking for a book.
@@ -560,7 +560,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Odile</span>
+            <span class="dialogue-name">オディール</span>
             <span class="dialogue-expression">(lol2)</span>
         </span>
         With words in it. No pictures.
@@ -568,7 +568,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Bonnie</span>
+            <span class="dialogue-name">ボニー</span>
             <span class="dialogue-expression">(serious1)</span>
         </span>
         I am so sorry I cannot help, Dile. I wish you the best in all future endive-vors.
@@ -576,7 +576,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Bonnie</span>
+            <span class="dialogue-name">ボニー</span>
             <span class="dialogue-expression">(sulk5)</span>
         </span>
         I will stay here and also do my important things.
@@ -584,7 +584,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Bonnie</span>
+            <span class="dialogue-name">ボニー</span>
             <span class="dialogue-expression">(happy2)</span>
         </span>
         Like look at this field.
@@ -592,7 +592,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Odile</span>
+            <span class="dialogue-name">オディール</span>
             <span class="dialogue-expression">(lol3)</span>
         </span>
         Thank you for your support, Boniface.
@@ -604,7 +604,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Bonnie</span>
+            <span class="dialogue-name">ボニー</span>
             <span class="dialogue-expression">(serious1)</span>
         </span>
         I will never help you find a book. I have more important things to do.
@@ -612,7 +612,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Bonnie</span>
+            <span class="dialogue-name">ボニー</span>
             <span class="dialogue-expression">(lol1)</span>
         </span>
         Like watching this carrot grow.
@@ -632,7 +632,7 @@
 
   <p class="dialogue-line">
     <span class="dialogue-head">
-      <span class="dialogue-name">Isabeau</span>
+      <span class="dialogue-name">イザボー</span>
       <span class="dialogue-expression">(happy1)</span>
     </span>
     Ohoho! You guys look thick as thieves as usual. Are you on a secret quest again?
@@ -640,7 +640,7 @@
     
   <p class="dialogue-line">
     <span class="dialogue-head">
-      <span class="dialogue-name">Odile</span>
+      <span class="dialogue-name">オディール</span>
       <span class="dialogue-expression">(lol1)</span>
     </span>
     Indeed we are.
@@ -648,7 +648,7 @@
 
   <p class="dialogue-line">
     <span class="dialogue-head">
-      <span class="dialogue-name">Isabeau</span>
+      <span class="dialogue-name">イザボー</span>
       <span class="dialogue-expression">(really1)</span>
     </span>
     Good for you. Nothing like a secret quest to make life worth living.
@@ -656,7 +656,7 @@
 
   <p class="dialogue-line">
     <span class="dialogue-head">
-      <span class="dialogue-name">Isabeau</span>
+      <span class="dialogue-name">イザボー</span>
       <span class="dialogue-expression">(fufufu1)</span>
     </span>
     Ah, I'm so jealous... I'd love to go on a secret quest, too...
@@ -664,7 +664,7 @@
 
   <p class="dialogue-line">
     <span class="dialogue-head">
-      <span class="dialogue-name">Isabeau</span>
+      <span class="dialogue-name">イザボー</span>
       <span class="dialogue-expression">(hahaha1)</span>
     </span>
     Let's go on a secret quest before we part ways, yeah?
@@ -672,7 +672,7 @@
 
   <p class="dialogue-line">
     <span class="dialogue-head">
-      <span class="dialogue-name">Odile</span>
+      <span class="dialogue-name">オディール</span>
       <span class="dialogue-expression">(gentle1)</span>
     </span>
     Oh, I'd love to. A secret quest with you could be fun, Isabeau.
@@ -680,7 +680,7 @@
 
   <p class="dialogue-line">
     <span class="dialogue-head">
-      <span class="dialogue-name">Isabeau</span>
+      <span class="dialogue-name">イザボー</span>
       <span class="dialogue-expression">(neutral1)</span>
     </span>
     Huh?
@@ -688,7 +688,7 @@
 
   <p class="dialogue-line">
     <span class="dialogue-head">
-      <span class="dialogue-name">Isabeau</span>
+      <span class="dialogue-name">イザボー</span>
       <span class="dialogue-expression">(omgggg1)</span>
     </span>
     OH, WITH YOU, M'DAME ODILE!!!
@@ -696,7 +696,7 @@
 
   <p class="dialogue-line">
     <span class="dialogue-head">
-      <span class="dialogue-name">Isabeau</span>
+      <span class="dialogue-name">イザボー</span>
       <span class="dialogue-expression">(shy1)</span>
     </span>
     Yes!!! That's exactly what I meant!!! I definitely meant going on a secret quest with you, because you are also standing right here. Yes.
@@ -704,7 +704,7 @@
 
   <p class="dialogue-line">
     <span class="dialogue-head">
-      <span class="dialogue-name">Odile</span>
+      <span class="dialogue-name">オディール</span>
       <span class="dialogue-expression">(lol3)</span>
     </span>
     . . .
@@ -712,7 +712,7 @@
 
   <p class="dialogue-line">
     <span class="dialogue-head">
-      <span class="dialogue-name">Isabeau</span>
+      <span class="dialogue-name">イザボー</span>
       <span class="dialogue-expression">(awkward1)</span>
     </span>
     . . .
@@ -720,7 +720,7 @@
 
   <p class="dialogue-line">
     <span class="dialogue-head">
-      <span class="dialogue-name">Isabeau</span>
+      <span class="dialogue-name">イザボー</span>
       <span class="dialogue-expression">(disappointed1)</span>
     </span>
     Please don't look at me.
@@ -728,7 +728,7 @@
 
   <p class="dialogue-line">
     <span class="dialogue-head">
-      <span class="dialogue-name">Odile</span>
+      <span class="dialogue-name">オディール</span>
       <span class="dialogue-expression">(lol1)</span>
     </span>
     Uh HUH.
@@ -740,7 +740,7 @@
 
   <p class="dialogue-line">
     <span class="dialogue-head">
-      <span class="dialogue-name">Isabeau</span>
+      <span class="dialogue-name">イザボー</span>
       <span class="dialogue-expression">(hahaha1)</span>
     </span>
     Have fun, you two!
@@ -763,7 +763,7 @@
 
   <p class="dialogue-line">
     <span class="dialogue-head">
-      <span class="dialogue-name">Odile</span>
+      <span class="dialogue-name">オディール</span>
       <span class="dialogue-expression">(expressionnumber)</span>
     </span>
     Hello, nice to talk to you, goodbye.
@@ -787,7 +787,7 @@
 
   <p class="dialogue-line">
     <span class="dialogue-head">
-      <span class="dialogue-name">Odile</span>
+      <span class="dialogue-name">オディール</span>
       <span class="dialogue-expression">(reading2)</span>
     </span>
     The Favor Tree, huh...
@@ -795,7 +795,7 @@
 
   <p class="dialogue-line">
     <span class="dialogue-head">
-      <span class="dialogue-name">Odile</span>
+      <span class="dialogue-name">オディール</span>
       <span class="dialogue-expression">(lol3)</span>
     </span>
     Quite an interesting tradition, isn't it?
@@ -823,7 +823,7 @@
 
   <p class="dialogue-line">
     <span class="dialogue-head">
-      <span class="dialogue-name">Odile</span>
+      <span class="dialogue-name">オディール</span>
       <span class="dialogue-expression">(lol1)</span>
     </span>
     Piou piou.
@@ -851,7 +851,7 @@
   
   <p class="dialogue-line">
     <span class="dialogue-head">
-      <span class="dialogue-name">Odile</span>
+      <span class="dialogue-name">オディール</span>
       <span class="dialogue-expression">(awkward1)</span>
     </span>
     There's no need to go here right now, is there?
