--- a/public/rooms/dormont/east.html
+++ b/public/rooms/dormont/east.html
@@ -70,14 +70,14 @@
     <ul>
         <li><b>ACT 1 & 2:</b>
             <span class="dialogue-head">
-                <span class="dialogue-name">Siffrin</span>
+                <span class="dialogue-name">シフラン</span>
                 <span class="dialogue-expression">(nya1)</span>
             </span>
             (...It's Mirabelle!)
         </li>
         <li><b>ACT 3 & 4:</b>
             <span class="dialogue-head">
-                <span class="dialogue-name">Siffrin</span>
+                <span class="dialogue-name">シフラン</span>
                 <span class="dialogue-expression">(fake1)</span>
             </span>
             (...It's Mirabelle.)
@@ -102,14 +102,14 @@
     <ul>
         <li><b>ACT 1 & 2: </b>
             <span class="dialogue-head">
-                <span class="dialogue-name">Siffrin</span>
+                <span class="dialogue-name">シフラン</span>
                 <span class="dialogue-expression">(nya1)</span>
             </span>
             (...It's you!)
         </li>
         <li><b>ACT 3 & 4: </b>
             <span class="dialogue-head">
-                <span class="dialogue-name">Siffrin</span>
+                <span class="dialogue-name">シフラン</span>
                 <span class="dialogue-expression">(fake1)</span>
             </span>
             (...It's you.)
@@ -141,7 +141,7 @@
     <ul>
         <li>
             <span class="dialogue-head">
-                <span class="dialogue-name">Siffrin</span>
+                <span class="dialogue-name">シフラン</span>
                 <span class="dialogue-expression">(smiling3)</span>
             </span>
         </li>
@@ -165,14 +165,14 @@
     <ul>
         <li><b>ACT 1 & 2: </b>
             <span class="dialogue-head">
-                <span class="dialogue-name">Siffrin</span>
+                <span class="dialogue-name">シフラン</span>
                 <span class="dialogue-expression">(nya1)</span>
             </span>
             (...It's you and your [friends/allies]!)
         </li>
         <li><b>ACT 3 & 4: </b>
             <span class="dialogue-head">
-                <span class="dialogue-name">Siffrin</span>
+                <span class="dialogue-name">シフラン</span>
                 <span class="dialogue-expression">(fake1)</span>
             </span>
             (...It's you and your [allies/family members].)
@@ -194,13 +194,13 @@
     <ul>
         <li><b>ACT 1 & 2: </b>
             <span class="dialogue-head">
-                <span class="dialogue-name">Siffrin</span>
+                <span class="dialogue-name">シフラン</span>
                 <span class="dialogue-expression">(lol1)</span>
             </span>
         </li>
         <li><b>ACT 3 & 4: </b>
             <span class="dialogue-head">
-                <span class="dialogue-name">Siffrin</span>
+                <span class="dialogue-name">シフラン</span>
                 <span class="dialogue-expression">(smiling3)</span>
             </span>
         </li>
@@ -253,14 +253,14 @@
     <ul>
         <li><b>ACT 2: </b>
             <span class="dialogue-head">
-                <span class="dialogue-name">Siffrin</span>
+                <span class="dialogue-name">シフラン</span>
                 <span class="dialogue-expression">(boo1)</span>
             </span>
             (Are you?)
         </li>
         <li><b>ACT 3 & 4: </b>
             <span class="dialogue-head">
-                <span class="dialogue-name">Siffrin</span>
+                <span class="dialogue-name">シフラン</span>
                 <span class="dialogue-expression">(fake1)</span>
             </span>
             (...)
@@ -307,13 +307,13 @@
                     <ul>
                         <li><b>ACT 2: </b>
                             <span class="dialogue-head">
-                                <span class="dialogue-name">Siffrin</span>
+                                <span class="dialogue-name">シフラン</span>
                                 <span class="dialogue-expression">(smiling2)</span>
                             </span>
                         </li>
                         <li><b>ACT 3 & 4: </b>
                             <span class="dialogue-head">
-                                <span class="dialogue-name">Siffrin</span>
+                                <span class="dialogue-name">シフラン</span>
                                 <span class="dialogue-expression">(fake1)</span>
                             </span>
                         </li>
