--- a/public/rooms/dormont/flowerhouse.html
+++ b/public/rooms/dormont/flowerhouse.html
@@ -119,7 +119,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Siffrin</span>
+            <span class="dialogue-name">シフラン</span>
             <span class="dialogue-expression">(questions1)</span>
         </span>
         (...)
