--- a/public/rooms/dormont/itemshop.html
+++ b/public/rooms/dormont/itemshop.html
@@ -153,7 +153,7 @@
                             <br>
                             <p class="dialogue-line">
                                 <span class="dialogue-head">
-                                    <span class="dialogue-name">Siffrin</span>
+                                    <span class="dialogue-name">シフラン</span>
                                     <span class="dialogue-expression">(fake1)</span>
                                 </span>
                             </p>
@@ -209,7 +209,7 @@
                                                 </p>
                                                 <p class="dialogue-line">
                                                     <span class="dialogue-head">
-                                                        <span class="dialogue-name">Siffrin</span>
+                                                        <span class="dialogue-name">シフラン</span>
                                                         <span class="dialogue-expression">(fake1)</span>
                                                     </span>
                                                     Hypothetically, of course!
@@ -264,7 +264,7 @@
                         <div class="dialogue">
                             <p class="dialogue-line">
                                 <span class="dialogue-head">
-                                    <span class="dialogue-name">Siffrin</span>
+                                    <span class="dialogue-name">シフラン</span>
                                     <span class="dialogue-expression">(questions1)</span>
                                 </span>
                                 (Oh, before you forget.) Know anything about locked doors in the House?
@@ -328,7 +328,7 @@
                             <br>
                             <p class="dialogue-line">
                                 <span class="dialogue-head">
-                                    <span class="dialogue-name">Siffrin</span>
+                                    <span class="dialogue-name">シフラン</span>
                                     <span class="dialogue-expression">(questions1)</span>
                                 </span>
                                 Know of any hidden rooms in the House?
@@ -421,7 +421,7 @@
                             </p>
                             <p class="dialogue-line">
                                 <span class="dialogue-head">
-                                    <span class="dialogue-name">Odile</span>
+                                    <span class="dialogue-name">オディール</span>
                                     <span class="dialogue-expression">(up1)</span>
                                 </span>
                                 ...
