--- a/public/rooms/dormont/library.html
+++ b/public/rooms/dormont/library.html
@@ -71,7 +71,7 @@
                             <br>
                             <p class="dialogue-line">
                                 <span class="dialogue-head">
-                                    <span class="dialogue-name">Siffrin</span>
+                                    <span class="dialogue-name">シフラン</span>
                                     <span class="dialogue-expression">(questions1)</span>
                                 </span>
                                 (Are you?)
@@ -112,7 +112,7 @@
                                             </p>
                                             <p class="dialogue-line">
                                                 <span class="dialogue-head">
-                                                    <span class="dialogue-name">Siffrin</span>
+                                                    <span class="dialogue-name">シフラン</span>
                                                     <span class="dialogue-expression">(um2)</span>
                                                 </span>
                                                 (The WHAT.) The WHAT?
@@ -144,7 +144,7 @@
                                             </p>
                                             <p class="dialogue-line">
                                                 <span class="dialogue-head">
-                                                    <span class="dialogue-name">Siffrin</span>
+                                                    <span class="dialogue-name">シフラン</span>
                                                     <span class="dialogue-expression">(okay2)</span>
                                                 </span>
                                                 (...) Yeah, I'll try.
