--- a/public/rooms/dormont/north.html
+++ b/public/rooms/dormont/north.html
@@ -46,7 +46,7 @@
 <div class="dialogue">
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Isabeau</span>
+            <span class="dialogue-name">イザボー</span>
             <span class="dialogue-expression">(hahaha2)</span>
         </span>
         Hi again, Sif! What's up?
@@ -68,7 +68,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Isabeau</span>
+            <span class="dialogue-name">イザボー</span>
             <span class="dialogue-expression">(wonder2)</span>
         </span>
         Hi again, Sif?
@@ -76,7 +76,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Isabeau</span>
+            <span class="dialogue-name">イザボー</span>
             <span class="dialogue-expression">(sad2)</span>
         </span>
         You looked like you were in a hurry earlier, so I left you alone, but... Is everything okay?
@@ -92,7 +92,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Isabeau</span>
+            <span class="dialogue-name">イザボー</span>
             <span class="dialogue-expression">(sad3)</span>
         </span>
         ...
@@ -100,7 +100,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Isabeau</span>
+            <span class="dialogue-name">イザボー</span>
             <span class="dialogue-expression">(really1)</span>
         </span>
         Sure, I'll believe you.
@@ -108,7 +108,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Isabeau</span>
+            <span class="dialogue-name">イザボー</span>
             <span class="dialogue-expression">(hahaha2)</span>
         </span>
         What's up?
@@ -150,7 +150,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Siffrin</span>
+            <span class="dialogue-name">シフラン</span>
             <span class="dialogue-expression">(smiling2)</span>
         </span>
         "Thank you for teaching me."
