--- a/public/rooms/dormont/stylishhouse.html
+++ b/public/rooms/dormont/stylishhouse.html
@@ -491,7 +491,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Siffrin</span>
+            <span class="dialogue-name">シフラン</span>
             <span class="dialogue-expression">(smiling3)</span>
         </span>
         "She really liked it!"
