--- a/public/rooms/dormont/tutokid.html
+++ b/public/rooms/dormont/tutokid.html
@@ -118,13 +118,13 @@
     <ul>
         <li><b>ACT 1 & 2:</b>
             <span class="dialogue-head">
-                <span class="dialogue-name">Siffrin</span>
+                <span class="dialogue-name">シフラン</span>
                 <span class="dialogue-expression">(questions1)</span>
             </span>
         </li>
         <li><b>ACT 3 & 4:</b>
             <span class="dialogue-head">
-                <span class="dialogue-name">Siffrin</span>
+                <span class="dialogue-name">シフラン</span>
                 <span class="dialogue-expression">(fake1)</span>
             </span>
         </li>
@@ -149,13 +149,13 @@
                     <ul>
                         <li><b>ACT 2:</b>
                             <span class="dialogue-head">
-                                <span class="dialogue-name">Siffrin</span>
+                                <span class="dialogue-name">シフラン</span>
                                 <span class="dialogue-expression">(questions1)</span>
                             </span>
                         </li>
                         <li><b>ACT 3 & 4:</b>
                             <span class="dialogue-head">
-                                <span class="dialogue-name">Siffrin</span>
+                                <span class="dialogue-name">シフラン</span>
                                 <span class="dialogue-expression">(fake1)</span>
                             </span>
                         </li>
@@ -392,13 +392,13 @@
                     <ul>
                         <li><b>ACT 1 & 2:</b> 
                             <span class="dialogue-head">
-                                <span class="dialogue-name">Siffrin</span>
+                                <span class="dialogue-name">シフラン</span>
                                 <span class="dialogue-expression">(smiling3)</span>
                             </span>
                         </li>
                         <li><b>ACT 3 & 4:</b>
                             <span class="dialogue-head">
-                                <span class="dialogue-name">Siffrin</span>
+                                <span class="dialogue-name">シフラン</span>
                                 <span class="dialogue-expression">(fake1)</span>
                             </span>
                         </li>
@@ -521,14 +521,14 @@
     <ul>
         <li><b>ACT 1 & 2:</b>
             <span class="dialogue-head">
-                <span class="dialogue-name">Siffrin</span>
+                <span class="dialogue-name">シフラン</span>
                 <span class="dialogue-expression">(okay1)</span>
             </span>
             (Who doesn't know how to play...)
         </li>
         <li><b>ACT 3 & 4:</b>
             <span class="dialogue-head">
-                <span class="dialogue-name">Siffrin</span>
+                <span class="dialogue-name">シフラン</span>
                 <span class="dialogue-expression">(fake1)</span>
             </span>
             (...)
@@ -577,14 +577,14 @@
                     <ul>
                         <li><b>ACT 1 & 2:</b>
                             <span class="dialogue-head">
-                                <span class="dialogue-name">Siffrin</span>
+                                <span class="dialogue-name">シフラン</span>
                                 <span class="dialogue-expression">(n-nya1)</span>
                             </span>
                             (Uh...)
                         </li>
                         <li><b>ACT 3 & 4:</b>
                             <span class="dialogue-head">
-                                <span class="dialogue-name">Siffrin</span>
+                                <span class="dialogue-name">シフラン</span>
                                 <span class="dialogue-expression">(fake1)</span>
                             </span>
                             (Stars.)
@@ -661,13 +661,13 @@
     <ul>
         <li><b>ACT 1 & 2:</b>
             <span class="dialogue-head">
-                <span class="dialogue-name">Siffrin</span>
+                <span class="dialogue-name">シフラン</span>
                 <span class="dialogue-expression">(questions1)</span>
             </span>
         </li>
         <li><b>ACT 3 & 4:</b>
             <span class="dialogue-head">
-                <span class="dialogue-name">Siffrin</span>
+                <span class="dialogue-name">シフラン</span>
                 <span class="dialogue-expression">(fake1)</span>
             </span>
         </li>
@@ -1333,7 +1333,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Siffrin</span>
+            <span class="dialogue-name">シフラン</span>
             <span class="dialogue-expression">(TS_fake1)</span>
         </span>
         "Tutorial Kid."
@@ -1378,7 +1378,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Siffrin</span>
+            <span class="dialogue-name">シフラン</span>
             <span class="dialogue-expression">(TS_fake1)</span>
         </span>
         "Let's play Rock Paper Scissors."
