--- a/public/rooms/floor3/prayerroom.html
+++ b/public/rooms/floor3/prayerroom.html
@@ -57,7 +57,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Isabeau</span>
+            <span class="dialogue-name">イザボー</span>
             <span class="dialogue-expression">(boo1)</span>
         </span>
         ...Well, I thought there'd be something in this room, but...
@@ -65,7 +65,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Bonnie</span>
+            <span class="dialogue-name">ボニー</span>
             <span class="dialogue-expression">(stop!1)</span>
         </span>
         BUT IT'S A CRABBING DEAD END!!!!!!!!!
@@ -73,7 +73,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Odile</span>
+            <span class="dialogue-name">オディール</span>
             <span class="dialogue-expression">(lol1)</span>
         </span>
         Language.
@@ -81,7 +81,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Mirabelle</span>
+            <span class="dialogue-name">ミラベル</span>
             <span class="dialogue-expression">(anxious2)</span>
         </span>
         But there's an intact statue of the Change God over there...  Isn't it the first we've seen in the House?
@@ -98,7 +98,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Odile</span>
+            <span class="dialogue-name">オディール</span>
             <span class="dialogue-expression">(dotdotdot1)</span>
         </span>
         ...
@@ -106,7 +106,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Odile</span>
+            <span class="dialogue-name">オディール</span>
             <span class="dialogue-expression">(urgh1)</span>
         </span>
         I'm sorry, why are we back here?
@@ -114,7 +114,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Isabeau</span>
+            <span class="dialogue-name">イザボー</span>
             <span class="dialogue-expression">(oh1)</span>
         </span>
         M'dame! Are you saying Sif was wrong to bring us all the way back to a room we already searched top to bottom because there's only one thing here?
@@ -122,7 +122,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Isabeau</span>
+            <span class="dialogue-name">イザボー</span>
             <span class="dialogue-expression">(fufufu1)</span>
         </span>
         M'dame, you're so weird.
@@ -130,7 +130,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Odile</span>
+            <span class="dialogue-name">オディール</span>
             <span class="dialogue-expression">(urgh1)</span>
         </span>
         ...
@@ -165,7 +165,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Mirabelle</span>
+            <span class="dialogue-name">ミラベル</span>
             <span class="dialogue-expression">(sad2)</span>
         </span>
         ...
@@ -173,7 +173,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Isabeau</span>
+            <span class="dialogue-name">イザボー</span>
             <span class="dialogue-expression">(hm3)</span>
         </span>
         ...
@@ -181,7 +181,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Bonnie</span>
+            <span class="dialogue-name">ボニー</span>
             <span class="dialogue-expression">(sad2)</span>
         </span>
         ...
@@ -189,7 +189,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Odile</span>
+            <span class="dialogue-name">オディール</span>
             <span class="dialogue-expression">(dotdotdot2)</span>
         </span>
         ...
@@ -289,7 +289,7 @@
 
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">Isabeau</span>
+                            <span class="dialogue-name">イザボー</span>
                             <span class="dialogue-expression">(angry2)</span>
                         </span>
                         ...?
@@ -311,7 +311,7 @@
 
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">Isabeau</span>
+                            <span class="dialogue-name">イザボー</span>
                             <span class="dialogue-expression">(hm4)</span>
                         </span>
                         ...Sif, are you--
@@ -357,7 +357,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Mirabelle</span>
+            <span class="dialogue-name">ミラベル</span>
             <span class="dialogue-expression">(awawa1)</span>
         </span>
         Siffrin??? Wh-what are you holding there???
@@ -365,7 +365,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Bonnie</span>
+            <span class="dialogue-name">ボニー</span>
             <span class="dialogue-expression">(and then1)</span>
         </span>
         <span class="shake big">A KNIFE!!!!!!!!!!</span>
@@ -373,7 +373,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Isabeau</span>
+            <span class="dialogue-name">イザボー</span>
             <span class="dialogue-expression">(huhwah1)</span>
         </span>
         Did, did the Change God give it to us???
@@ -381,7 +381,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Odile</span>
+            <span class="dialogue-name">オディール</span>
             <span class="dialogue-expression">(uwah!1)</span>
         </span>
         Huh??? No, it can't--
@@ -389,7 +389,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Mirabelle</span>
+            <span class="dialogue-name">ミラベル</span>
             <span class="dialogue-expression">(awawa1)</span>
         </span>
         I think th-they did!!! With it, we can--
@@ -405,7 +405,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Mirabelle</span>
+            <span class="dialogue-name">ミラベル</span>
             <span class="dialogue-expression">(angy1)</span>
         </span>
         <span class="big">WAH!!!!!</span>
@@ -421,7 +421,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Odile</span>
+            <span class="dialogue-name">オディール</span>
             <span class="dialogue-expression">(uwah!1)</span>
         </span>
         What the--
@@ -429,7 +429,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Isabeau</span>
+            <span class="dialogue-name">イザボー</span>
             <span class="dialogue-expression">(huhwah1)</span>
         </span>
         That's... Floor 3's entrance???
@@ -437,7 +437,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Bonnie</span>
+            <span class="dialogue-name">ボニー</span>
             <span class="dialogue-expression">(yeah!1)</span>
         </span>
         The Change God beamed us there!!!
@@ -445,7 +445,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Odile</span>
+            <span class="dialogue-name">オディール</span>
             <span class="dialogue-expression">(uwah!1)</span>
         </span>
         That's...
@@ -453,7 +453,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Odile</span>
+            <span class="dialogue-name">オディール</span>
             <span class="dialogue-expression">(urgh1)</span>
         </span>
         . . .
@@ -461,7 +461,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Bonnie</span>
+            <span class="dialogue-name">ボニー</span>
             <span class="dialogue-expression">(hmf2)</span>
         </span>
         . . .
@@ -469,7 +469,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Mirabelle</span>
+            <span class="dialogue-name">ミラベル</span>
             <span class="dialogue-expression">(worried1)</span>
         </span>
         . . .
@@ -479,7 +479,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Isabeau</span>
+            <span class="dialogue-name">イザボー</span>
             <span class="dialogue-expression">(brag1)</span>
         </span>
         Well, at least we don't have to backtrack. I'm not gonna ask questions.
@@ -487,7 +487,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Mirabelle</span>
+            <span class="dialogue-name">ミラベル</span>
             <span class="dialogue-expression">(awawa1)</span>
         </span>
         Th-thank you Change God for this boon!!!
@@ -495,7 +495,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Isabeau</span>
+            <span class="dialogue-name">イザボー</span>
             <span class="dialogue-expression">(brag1)</span>
         </span>
         Thanks Change God!
@@ -503,7 +503,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Bonnie</span>
+            <span class="dialogue-name">ボニー</span>
             <span class="dialogue-expression">(and then1)</span>
         </span>
         Thank you!!!
@@ -519,7 +519,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Odile</span>
+            <span class="dialogue-name">オディール</span>
             <span class="dialogue-expression">(gimme1)</span>
         </span>
         Thank you Change God, or Expressions, or whichever deity gave us this knife.
@@ -530,13 +530,13 @@
     <ul>
         <li><b>ACT 2 & 3:</b>
             <span class="dialogue-head">
-                <span class="dialogue-name">Siffrin</span>
+                <span class="dialogue-name">シフラン</span>
                 <span class="dialogue-expression">(awkward1)</span>
             </span>
         </li>
         <li><b>ACT 4:</b>
             <span class="dialogue-head">
-                <span class="dialogue-name">Siffrin</span>
+                <span class="dialogue-name">シフラン</span>
                 <span class="dialogue-expression">(hide1)</span>
             </span>
         </li>
@@ -617,7 +617,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Bonnie</span>
+            <span class="dialogue-name">ボニー</span>
             <span class="dialogue-expression">(lmao1)</span>
         </span>
         Can noses look like that?
@@ -625,7 +625,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Isabeau</span>
+            <span class="dialogue-name">イザボー</span>
             <span class="dialogue-expression">(really1)</span>
         </span>
         Wow, that left eye is somehow above the right brow.
@@ -633,7 +633,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Odile</span>
+            <span class="dialogue-name">オディール</span>
             <span class="dialogue-expression">(huh1)</span>
         </span>
         I can't tell if they're supposed to be smiling or frowning...
@@ -641,7 +641,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Mirabelle</span>
+            <span class="dialogue-name">ミラベル</span>
             <span class="dialogue-expression">(anxious2)</span>
         </span>
         ...
@@ -652,14 +652,14 @@
     <ul>
         <li><b>ACT 2 & 3:</b>
             <span class="dialogue-head">
-                <span class="dialogue-name">Isabeau</span>
+                <span class="dialogue-name">イザボー</span>
                 <span class="dialogue-expression">(brag1)</span>
             </span>
             Mira, Mira, help us roast this statue's terribly made face.
         </li>
         <li><b>ACT 4:</b> 
             <span class="dialogue-head">
-                <span class="dialogue-name">Isabeau</span>
+                <span class="dialogue-name">イザボー</span>
                 <span class="dialogue-expression">(brag1)</span>
             </span>
             Sif, Mira, help us roast this statue's terribly made face.
@@ -670,7 +670,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Mirabelle</span>
+            <span class="dialogue-name">ミラベル</span>
             <span class="dialogue-expression">(sad1)</span>
         </span>
         . . .
@@ -678,7 +678,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Isabeau</span>
+            <span class="dialogue-name">イザボー</span>
             <span class="dialogue-expression">(huh1)</span>
         </span>
         . . . Mira?
@@ -696,7 +696,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Odile</span>
+            <span class="dialogue-name">オディール</span>
             <span class="dialogue-expression">(huh3)</span>
         </span>
         Ah...
@@ -704,7 +704,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Bonnie</span>
+            <span class="dialogue-name">ボニー</span>
             <span class="dialogue-expression">(wait1)</span>
         </span>
         Uh oh.
@@ -712,7 +712,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Mirabelle</span>
+            <span class="dialogue-name">ミラベル</span>
             <span class="dialogue-expression">(sad2)</span>
         </span>
         ...I was trying to make them look gentle and nice...
@@ -720,7 +720,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Isabeau</span>
+            <span class="dialogue-name">イザボー</span>
             <span class="dialogue-expression">(NO!1)</span>
         </span>
         MIRA WE'RE SO SORRY!!!!!!!!!!!!
@@ -728,7 +728,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Bonnie</span>
+            <span class="dialogue-name">ボニー</span>
             <span class="dialogue-expression">(stop!1)</span>
         </span>
         SORRY WE SAID YOUR STATUE SUCKED!!!!!!!!!!
@@ -736,7 +736,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Mirabelle</span>
+            <span class="dialogue-name">ミラベル</span>
             <span class="dialogue-expression">(sad2)</span>
         </span>
         N-no, no, it's fine...
@@ -746,7 +746,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Mirabelle</span>
+            <span class="dialogue-name">ミラベル</span>
             <span class="dialogue-expression">(serious2)</span>
         </span>
         ...I'll get my revenge against you all someday.
@@ -821,7 +821,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Siffrin</span>
+            <span class="dialogue-name">シフラン</span>
             <span class="dialogue-expression">(surprised3)</span>
         </span>
         "Mira, can you put your hand on the statue?"
@@ -829,7 +829,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Mirabelle</span>
+            <span class="dialogue-name">ミラベル</span>
             <span class="dialogue-expression">(oh!1)</span>
         </span>
         Hm? Um, sure?
@@ -861,7 +861,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Mirabelle</span>
+            <span class="dialogue-name">ミラベル</span>
             <span class="dialogue-expression">(angy1)</span>
         </span>
         <span class="shake">WAH!!!!!!!!</span>
