--- a/public/rooms/king/questions.html
+++ b/public/rooms/king/questions.html
@@ -726,14 +726,14 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         <span class="shake">......</span>
     </p>
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Odile</span>
+            <span class="dialogue-name">オディール</span>
             <span class="dialogue-expression">(hm1)</span>
         </span>
         What.
@@ -741,7 +741,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Mirabelle</span>
+            <span class="dialogue-name">ミラベル</span>
             <span class="dialogue-expression">(awawa1)</span>
         </span>
         Siffrin?!?
@@ -749,7 +749,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Isabeau</span>
+            <span class="dialogue-name">イザボー</span>
             <span class="dialogue-expression">(hahaaa1)</span>
         </span>
         Uh, Sif, I don't know how it works where you're from...
@@ -757,7 +757,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Isabeau</span>
+            <span class="dialogue-name">イザボー</span>
             <span class="dialogue-expression">(hahaaa1)</span>
         </span>
         But in Vaugarde, we only give flowers to people we, um... Actually like.
@@ -765,7 +765,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Siffrin</span>
+            <span class="dialogue-name">シフラン</span>
             <span class="dialogue-expression">(tired1)</span>
         </span>
         (...) "I remember that you can give flowers to whoever you want, as long as they're..."
@@ -773,14 +773,14 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         <span class="shake">......Important.</span>
     </p>
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         <span class="shake">Friends, family, rivals...... Enemies......</span>
     </p>
@@ -795,21 +795,21 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         <span class="shake">......</span>
     </p>
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         <span class="shake">Bright one...... No matter how this battle ends......</span>
     </p>
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         <span class="shake">Will you remember me......?</span>
     </p>
@@ -818,7 +818,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Siffrin</span>
+            <span class="dialogue-name">シフラン</span>
             <span class="dialogue-expression">(hide1)</span>
         </span>
         (...)
@@ -833,21 +833,21 @@
 
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">King</span>
+                            <span class="dialogue-name">王</span>
                         </span>
                         <span class="shake">......</span>
                     </p>
 
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">King</span>
+                            <span class="dialogue-name">王</span>
                         </span>
                         <span class="shake">Ha......</span>
                     </p>
 
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">King</span>
+                            <span class="dialogue-name">王</span>
                         </span>
                         Let us make this battle a moment truly worth remembering, then!
                     </p>
@@ -863,28 +863,28 @@
 
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">King</span>
+                            <span class="dialogue-name">王</span>
                         </span>
                         <span class="shake">Ha.</span>
                     </p>
 
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">King</span>
+                            <span class="dialogue-name">王</span>
                         </span>
                         <span class="shake">......</span>
                     </p>
 
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">King</span>
+                            <span class="dialogue-name">王</span>
                         </span>
                         <span class="shake">If it's any consolation......</span>
                     </p>
 
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">King</span>
+                            <span class="dialogue-name">王</span>
                         </span>
                         <span class="shake">I'll remember you after I defeat you, bright one.</span>
                     </p>
