--- a/public/rooms/loop/basics.html
+++ b/public/rooms/loop/basics.html
@@ -47,7 +47,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Loop</span>
+            <span class="dialogue-name">ループ</span>
             <span class="dialogue-expression">(teehee4)</span>
         </span>
         Heya, stardust! How can I help you on this wonderful new loop?
@@ -57,7 +57,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Siffrin</span>
+            <span class="dialogue-name">シフラン</span>
             <span class="dialogue-expression">(questions1)</span>
         </span>
         (Questions, questions...)
@@ -69,7 +69,7 @@
                     <div class="dialogue">
                         <p class="dialogue-line">
                             <span class="dialogue-head">
-                                <span class="dialogue-name">Loop</span>
+                                <span class="dialogue-name">ループ</span>
                                 <span class="dialogue-expression">(hm1)</span>
                             </span>
                             What you should do? Well...
@@ -88,7 +88,7 @@
                 <div class="dialogue">
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">Loop</span>
+                            <span class="dialogue-name">ループ</span>
                             <span class="dialogue-expression">(happy1)</span>
                         </span>
                         Sure! What do you want to talk about?
@@ -118,7 +118,7 @@
                 <div class="dialogue">
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">Loop</span>
+                            <span class="dialogue-name">ループ</span>
                             <span class="dialogue-expression">(teehee5)</span>
                         </span>
                         See you later, stardust!
@@ -161,7 +161,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Loop</span>
+            <span class="dialogue-name">ループ</span>
             <span class="dialogue-expression">(happy1)</span>
         </span>
         Hey, stardust. How can I help you on this wonderful new loop?
@@ -172,13 +172,13 @@
     <ul>
         <li><b>ACT 3: </b>
             <span class="dialogue-head">
-                <span class="dialogue-name">Siffrin</span>
+                <span class="dialogue-name">シフラン</span>
                 <span class="dialogue-expression">(neutral1)</span>
             </span> (...)
         </li>
         <li><b>ACT 4: </b>
             <span class="dialogue-head">
-                <span class="dialogue-name">Siffrin</span>
+                <span class="dialogue-name">シフラン</span>
                 <span class="dialogue-expression">(tired2)</span>
             </span> (...)
         </li>
@@ -206,7 +206,7 @@
 
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">Loop</span>
+                            <span class="dialogue-name">ループ</span>
                             <span class="dialogue-expression">(oh1)</span>
                         </span>
                         Oh...!
@@ -214,7 +214,7 @@
 
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">Loop</span>
+                            <span class="dialogue-name">ループ</span>
                             <span class="dialogue-expression">(lol5)</span>
                         </span>
                         Our theory hangout! Yes!
@@ -222,7 +222,7 @@
 
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">Loop</span>
+                            <span class="dialogue-name">ループ</span>
                             <span class="dialogue-expression">(hm1)</span>
                         </span>
                         But we can't actually hang out right now. It'd be pretty useless.
@@ -230,7 +230,7 @@
 
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">Loop</span>
+                            <span class="dialogue-name">ループ</span>
                             <span class="dialogue-expression">(happy1)</span>
                         </span>
                         So how about you come back here early tomorrow, after you're done acting things out at the Clocktower?
@@ -238,7 +238,7 @@
 
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">Siffrin</span>
+                            <span class="dialogue-name">シフラン</span>
                             <span class="dialogue-expression">(surprised1)</span>
                         </span>
                         (Wait...) "You want me to sneak out?"
@@ -246,7 +246,7 @@
 
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">Loop</span>
+                            <span class="dialogue-name">ループ</span>
                             <span class="dialogue-expression">(lol5)</span>
                             </span>
                         And spend a loop with me, yes!
@@ -270,7 +270,7 @@
                     
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">Loop</span>
+                            <span class="dialogue-name">ループ</span>
                             <span class="dialogue-expression">(happy1)</span>
                         </span>
                         Does it matter what they think?
@@ -278,7 +278,7 @@
 
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">Loop</span>
+                            <span class="dialogue-name">ループ</span>
                             <span class="dialogue-expression">(teehee1)</span>
                         </span>
                         They'll forget it all in your next loop, after all!
@@ -286,7 +286,7 @@
 
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">Siffrin</span>
+                            <span class="dialogue-name">シフラン</span>
                             <span class="dialogue-expression">(hide1)</span>
                         </span>
                         (...)
@@ -303,7 +303,7 @@
 
                                     <p class="dialogue-line">
                                         <span class="dialogue-head">
-                                            <span class="dialogue-name">Loop</span>
+                                            <span class="dialogue-name">ループ</span>
                                             <span class="dialogue-expression">(hm1)</span>
                                         </span>
                                         Hm...
@@ -311,7 +311,7 @@
 
                                     <p class="dialogue-line">
                                         <span class="dialogue-head">
-                                            <span class="dialogue-name">Loop</span>
+                                            <span class="dialogue-name">ループ</span>
                                             <span class="dialogue-expression">(hmmm1)</span>
                                         </span>
                                         ...So you won't do it?
@@ -319,7 +319,7 @@
 
                                     <p class="dialogue-line">
                                         <span class="dialogue-head">
-                                            <span class="dialogue-name">Loop</span>
+                                            <span class="dialogue-name">ループ</span>
                                             <span class="dialogue-expression">(lol4)</span>
                                         </span>
                                         You won't come and hang out with little old me?
@@ -335,7 +335,7 @@
 
                                     <p class="dialogue-line">
                                         <span class="dialogue-head">
-                                            <span class="dialogue-name">Loop</span>
+                                            <span class="dialogue-name">ループ</span>
                                             <span class="dialogue-expression">(teehee5)</span>
                                         </span>
                                         Neat!
@@ -343,7 +343,7 @@
 
                                     <p class="dialogue-line">
                                         <span class="dialogue-head">
-                                            <span class="dialogue-name">Loop</span>
+                                            <span class="dialogue-name">ループ</span>
                                             <span class="dialogue-expression">(happy1)</span>
                                         </span>
                                         Will you come, then?
@@ -357,7 +357,7 @@
 
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">Siffrin</span>
+                            <span class="dialogue-name">シフラン</span>
                             <span class="dialogue-expression">(hide1)</span>
                         </span>
                     </p>
@@ -372,7 +372,7 @@
                                 <div class="dialogue">
                                     <p class="dialogue-line">
                                         <span class="dialogue-head">
-                                            <span class="dialogue-name">Loop</span>
+                                            <span class="dialogue-name">ループ</span>
                                             <span class="dialogue-expression">(teehee5)</span>
                                         </span>
                                         Neat!!!
@@ -380,7 +380,7 @@
 
                                     <p class="dialogue-line">
                                         <span class="dialogue-head">
-                                            <span class="dialogue-name">Loop</span>
+                                            <span class="dialogue-name">ループ</span>
                                             <span class="dialogue-expression">(happy1)</span>
                                         </span>
                                         ...I'll see you soon, then?
@@ -414,7 +414,7 @@
 
                                     <p class="dialogue-line">
                                         <span class="dialogue-head">
-                                            <span class="dialogue-name">Loop</span>
+                                            <span class="dialogue-name">ループ</span>
                                             <span class="dialogue-expression">(away1)</span>
                                         </span>
                                         ...So you won't come, huh...
@@ -422,7 +422,7 @@
 
                                     <p class="dialogue-line">
                                         <span class="dialogue-head">
-                                            <span class="dialogue-name">Loop</span>
+                                            <span class="dialogue-name">ループ</span>
                                             <span class="dialogue-expression">(away1)</span>
                                         </span>
                                         . . .
@@ -430,7 +430,7 @@
 
                                     <p class="dialogue-line">
                                         <span class="dialogue-head">
-                                            <span class="dialogue-name">Loop</span>
+                                            <span class="dialogue-name">ループ</span>
                                             <span class="dialogue-expression">(serious2)</span>
                                         </span>
                                         I'd really like you to spend a loop with me, stardust.
@@ -438,7 +438,7 @@
 
                                     <p class="dialogue-line">
                                         <span class="dialogue-head">
-                                            <span class="dialogue-name">Loop</span>
+                                            <span class="dialogue-name">ループ</span>
                                             <span class="dialogue-expression">(serious2)</span>
                                         </span>
                                         It doesn't matter if it's right now, or in a dozen, a hundred loops...
@@ -446,7 +446,7 @@
 
                                     <p class="dialogue-line">
                                         <span class="dialogue-head">
-                                            <span class="dialogue-name">Loop</span>
+                                            <span class="dialogue-name">ループ</span>
                                             <span class="dialogue-expression">(lol3)</span>
                                         </span>
                                         You'll have to spend time with me eventually! Just let me know when you want to!!!
@@ -454,7 +454,7 @@
 
                                     <p class="dialogue-line">
                                         <span class="dialogue-head">
-                                            <span class="dialogue-name">Loop</span>
+                                            <span class="dialogue-name">ループ</span>
                                             <span class="dialogue-expression">(subdued1)</span>
                                         </span>
                                         ...It's important.
@@ -485,7 +485,7 @@
 
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">Loop</span>
+                            <span class="dialogue-name">ループ</span>
                             <span class="dialogue-expression">(happy1)</span>
                         </span>
                         ...Will you come and hang out with me now?
@@ -493,7 +493,7 @@
 
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">Siffrin</span>
+                            <span class="dialogue-name">シフラン</span>
                             <span class="dialogue-expression">(shit1)</span>
                         </span>
                         (It'll mean leaving everyone behind, but...)
@@ -508,7 +508,7 @@
 
                                     <p class="dialogue-line">
                                         <span class="dialogue-head">
-                                            <span class="dialogue-name">Loop</span>
+                                            <span class="dialogue-name">ループ</span>
                                             <span class="dialogue-expression">(lol5)</span>
                                         </span>
                                         Neat!!!
@@ -516,7 +516,7 @@
 
                                     <p class="dialogue-line">
                                         <span class="dialogue-head">
-                                            <span class="dialogue-name">Loop</span>
+                                            <span class="dialogue-name">ループ</span>
                                             <span class="dialogue-expression">(happy1)</span>
                                         </span>
                                         ...Don't worry, stardust.
@@ -524,7 +524,7 @@
 
                                     <p class="dialogue-line">
                                         <span class="dialogue-head">
-                                            <span class="dialogue-name">Loop</span>
+                                            <span class="dialogue-name">ループ</span>
                                             <span class="dialogue-expression">(teehee4)</span>
                                         </span>
                                         ...I'll see you soon, then?
@@ -552,7 +552,7 @@
 
                                     <p class="dialogue-line">
                                         <span class="dialogue-head">
-                                            <span class="dialogue-name">Loop</span>
+                                            <span class="dialogue-name">ループ</span>
                                             <span class="dialogue-expression">(lol3)</span>
                                         </span>
                                         Ouuugh, rejected again!!!
@@ -560,7 +560,7 @@
 
                                     <p class="dialogue-line">
                                         <span class="dialogue-head">
-                                            <span class="dialogue-name">Loop</span>
+                                            <span class="dialogue-name">ループ</span>
                                             <span class="dialogue-expression">(lol5)</span>
                                         </span>
                                         How dare you play with my feelings like this, stardust!!!
@@ -590,7 +590,7 @@
                 <div class="dialogue">
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">Loop</span>
+                            <span class="dialogue-name">ループ</span>
                             <span class="dialogue-expression">(happy1)</span>
                         </span>
                         Sure. What do you want to talk about?
@@ -622,7 +622,7 @@
                 <div class="dialogue">
                     <p class="dialogue-line">
                         <span class="dialogue-head">
-                            <span class="dialogue-name">Loop</span>
+                            <span class="dialogue-name">ループ</span>
                             <span class="dialogue-expression">(happy1)</span>
                         </span>
                         See you later, stardust.
@@ -662,7 +662,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Loop</span>
+            <span class="dialogue-name">ループ</span>
             <span class="dialogue-expression">(ew1)</span>
         </span>
         . . .
