--- a/public/sasasap/perfend.html
+++ b/public/sasasap/perfend.html
@@ -365,14 +365,14 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         <span class="shake">Ah...... ah......</span>
     </p>
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         <span class="shake">Oh...... Young ones...... Are you...... here to kill me......?</span>
     </p>
@@ -386,35 +386,35 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         <span class="shake">Oh...... Young lady...... You stand for Change Themselves, do you not......?</span>
     </p>
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         <span class="shake">...I...</span>
     </p>
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         <span class="shake">I... I just want the world to stay the way it is now...... To be frozen in eternal beauty.......</span>
     </p>
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         <span class="shake">A world of everlasting peace and rest.</span>
     </p>
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         <span class="shake">Young housemaiden...... In a way... Isn't my wish a form of Change? Why aren't you on my side......?</span>
     </p>
@@ -429,21 +429,21 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         <span class="shake">Ah...... Can't you feel it, young lady......?</span>
     </p>
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         <span class="shake">The Universe yearns for everyone's hopes to be encased in limitless ice......</span>
     </p>
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         <span class="shake">Won't you allow your fate to be ended......?</span>
     </p>
@@ -474,21 +474,21 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         <span class="shake">Oh......</span>
     </p>
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         <span class="shake">Ha...... Spoken like a true Housemaiden of Change......</span>
     </p>
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         <span class="shake">Ha...... I understand...... Seems like &emsp; there is only one end for you all.</span>
     </p>
@@ -519,21 +519,21 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         <span class="shake">Hahaha...... Ooh...... Ooooh......!</span>
     </p>
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         <span class="shake">Ooooh, ooooooh, oooooh!!!! The Universe weeps...... The stars cry out in grief......!!!</span>
     </p>
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         <span class="shake">Oooh...... Oh...... Young ones...... If you won't obey...</span>
     </p>
@@ -542,7 +542,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         I suppose I'll have to <span class="shake">MAKE</span> you obey.
     </p>
@@ -573,14 +573,14 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         <span class="shake">Ooooh.... Ooooooh....</span>
     </p>
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         <span class="shake">I'm afraid &emsp; it won't be as easy as you think.</span>
     </p>
