--- a/public/about.html
+++ b/public/about.html
@@ -58,7 +58,7 @@
 <div class="dialogue">
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">Loop</span>
+            <span class="dialogue-name">ループ</span>
             <span class="dialogue-expression">(teehee2)</span>
         </span>
         This is test dialogue!
