--- a/public/sasasap/kingfightsap.html
+++ b/public/sasasap/kingfightsap.html
@@ -107,7 +107,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         <span class="shake">Ah...... ah......</span>
     </p>
@@ -123,7 +123,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         <span class="shake">Oh...... Young ones...... Are you...... here to kill me......?</span>
     </p>
@@ -137,35 +137,35 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         <span class="shake">Oh...... Young lady...... You stand for Change Themselves, do you not......?</span>
     </p>
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         <span class="shake">...I...</span>
     </p>
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         <span class="shake">I... I just want the world to stay the way it is now...... To be frozen in eternal beauty.......</span>
     </p>
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         <span class="shake">A world of everlasting peace and rest.</span>
     </p>
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         <span class="shake">Young housemaiden...... In a way... Isn't my wish a form of Change? Why aren't you on my side......?</span>
     </p>
@@ -180,21 +180,21 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         <span class="shake">Ah...... Can't you feel it, young lady......?</span>
     </p>
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         <span class="shake">The Universe yearns for everyone's hopes to be encased in limitless ice......</span>
     </p>
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         <span class="shake">Won't you allow your fate to be ended......?</span>
     </p>
@@ -225,21 +225,21 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         <span class="shake">Oh......</span>
     </p>
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         <span class="shake">Ha...... Spoken like a true Housemaiden of Change......</span>
     </p>
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         <span class="shake">Ha...... I understand...... Seems like &emsp; there is only one end for you all.</span>
     </p>
@@ -270,21 +270,21 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         <span class="shake">Hahaha...... Ooh...... Ooooh......!</span>
     </p>
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         <span class="shake">Ooooh, ooooooh, oooooh!!!! The Universe weeps...... The stars cry out in grief......!!!</span>
     </p>
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         <span class="shake">Oooh...... Oh...... Young ones...... If you won't obey...</span>
     </p>
@@ -293,7 +293,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         I suppose I'll have to <span class="shake">MAKE</span> you obey.
     </p>
@@ -450,14 +450,14 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         <span class="shake">Ooooh.... Ooooooh....</span>
     </p>
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         <span class="shake">I'm afraid &emsp; it won't be as easy as you think.</span>
     </p>
@@ -494,14 +494,14 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         <span class="shake">Ooooh....Oooooooh....</span>
     </p>
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         <span class="shake">I'm afraid &emsp; this is goodbye, young ones.</span>
     </p>
@@ -963,7 +963,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         <span class="shake">Oh.... ooooh.....</span>
     </p>
@@ -1131,7 +1131,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         <span class="shake">Ooh, oooooh.....</span>
     </p>
@@ -1177,35 +1177,35 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         <span class="shake">No... No... NO!!!!!!</span>
     </p>
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         <span class="shake">I cannot allow you to win!!! I can't!!! I won't!!!</span>
     </p>
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         <span class="shake">You poor, lost creatures... Why won't you listen to me? I only want what is best for you! For everyone!</span>
     </p>
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         <span class="shake">And if you won't listen...</span>
     </p>
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         <span class="shake big">YOU HAVE NO PLACE IN MY WORLD!!!</span></span>
     </p>
