--- a/public/sasasap/trueend.html
+++ b/public/sasasap/trueend.html
@@ -2871,7 +2871,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         <span class="shake">Ah...... ah......</span>
     </p>
@@ -3272,7 +3272,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         <span class="shake">Oh.... ooooh.....</span>
     </p>
@@ -3447,7 +3447,7 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         <span class="shake">Ooh, oooooh.....</span>
     </p>
@@ -3493,35 +3493,35 @@
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         <span class="shake">No... No... NO!!!!!!</span>
     </p>
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         <span class="shake">I cannot allow you to win!!! I can't!!! I won't!!!</span>
     </p>
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         <span class="shake">You poor, lost creatures... Why won't you listen to me? I only want what is best for you! For everyone!</span>
     </p>
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         <span class="shake">And if you won't listen...</span>
     </p>
 
     <p class="dialogue-line">
         <span class="dialogue-head">
-            <span class="dialogue-name">King</span>
+            <span class="dialogue-name">王</span>
         </span>
         <span class="shake big">YOU HAVE NO PLACE IN MY WORLD!!!</span>
     </p>
