--- a/public/test.html
+++ b/public/test.html
@@ -31,7 +31,7 @@
             <div class="dialogue">
                 <p class="dialogue-line">
                     <span class="dialogue-head">
-                        <span class="dialogue-name">Loop</span>
+                        <span class="dialogue-name">ループ</span>
                         <span class="dialogue-expression">(teehee2)</span>
                     </span>
                     This is a test dialogue~
@@ -39,7 +39,7 @@
 
                 <p class="dialogue-line">
                     <span class="dialogue-head">
-                        <span class="dialogue-name">Siffrin</span>
+                        <span class="dialogue-name">シフラン</span>
                         <span class="dialogue-expression">(what1)</span>
                     </span>
                     "A test for what?"
@@ -47,7 +47,7 @@
 
                 <p class="dialogue-line">
                     <span class="dialogue-head">
-                        <span class="dialogue-name">Loop</span>
+                        <span class="dialogue-name">ループ</span>
                         <span class="dialogue-expression">(oh my1)</span>
                     </span>
                     Wouldn't you like to know, weather boy?
@@ -57,7 +57,7 @@
 
                 <p class="dialogue-line">
                     <span class="dialogue-head">
-                        <span class="dialogue-name">Siffrin</span>
+                        <span class="dialogue-name">シフラン</span>
                         <span class="dialogue-expression">(what1)</span>
                     </span>
                     (What is Loop talking about.)
@@ -72,7 +72,7 @@
                             <div class="dialogue">
                                 <p class="dialogue-line">
                                     <span class="dialogue-head">
-                                        <span class="dialogue-name">Loop</span>
+                                        <span class="dialogue-name">ループ</span>
                                         <span class="dialogue-expression">(lol2)</span>
                                     </span>
                                     I wink at the camera.
@@ -88,7 +88,7 @@
 
                                 <p class="dialogue-line">
                                     <span class="dialogue-head">
-                                        <span class="dialogue-name">Siffrin</span>
+                                        <span class="dialogue-name">シフラン</span>
                                         <span class="dialogue-expression">(yelling4)</span>
                                     </span>
                                     <span class="big">"WHAT THE HELL'S A CAMERA???"</span>
@@ -103,7 +103,7 @@
 
                                 <p class="dialogue-line">
                                     <span class="dialogue-head">
-                                        <span class="dialogue-name">Loop</span>
+                                        <span class="dialogue-name">ループ</span>
                                         <span class="dialogue-expression">(teehee2)</span>
                                     </span>
                                     My my, struck speechless, are you?
@@ -127,7 +127,7 @@
 
                 <p class="dialogue-line">
                     <span class="dialogue-head">
-                        <span class="dialogue-name">Siffrin</span>
+                        <span class="dialogue-name">シフラン</span>
                         <span class="dialogue-expression">(what1)</span>
                     </span>
                     (Example thoughts.)
@@ -156,7 +156,7 @@
 
                 <p class="dialogue-line">
                     <span class="dialogue-head">
-                        <span class="dialogue-name">Loop</span>
+                        <span class="dialogue-name">ループ</span>
                         <span class="dialogue-expression">(teehee2)</span>
                     </span>
                     That's weird to say, stardust~
